
PROJECT(eaio)

INCLUDE_DIRECTORIES(".")

FILE(GLOB EAIO_HEADERS "*.h")
FILE(GLOB EAIO_SOURCES "*.cpp")
FILE(GLOB EAIO_INTERNAL_HEADERS "internal/*.h")
FILE(GLOB EAIO_INTERNAL_SOURCES "internal/*.cpp")
#FILE(GLOB EAIO_STDC_HEADERS "StdC/*.h")
#FILE(GLOB EAIO_STDC_SOURCES "StdC/*.cpp")
#FILE(GLOB EAIO_WIN32_HEADERS "Win32/*.h")
#FILE(GLOB EAIO_WIN32_SOURCES "Win32/*.cpp")

SET(EAIO_HEADERS
   ${EAIO_HEADERS}
   ${EAIO_INTERNAL_HEADERS}
#   ${EAIO_STDC_HEADERS}
#   ${EAIO_WIN32_HEADERS}
)

SET(EAIO_SOURCES
   ${EAIO_SOURCES}
   ${EAIO_INTERNAL_SOURCES}
#   ${EAIO_STDC_SOURCES}
#   ${EAIO_WIN32_SOURCES}
)

ADD_LIBRARY(eaio ${EAIO_HEADERS} ${EAIO_SOURCES})
